<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kmitl.it.tiwipabmin58070044.moneyflow.TransactionFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="50dp"
        android:text="@string/label_type"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="334dp"
        android:layout_height="30dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        android:background="@drawable/border_shadow_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_income"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/income"
            android:background="#0000FF"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_weight="1"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#CABBBBBB"/>

        <TextView
            android:id="@+id/tv_outcome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/outcome"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="168dp"
        android:text="@string/list"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_list"
        android:layout_width="334dp"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="200dp"
        android:hint="@string/detail_income"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="280dp"
        android:text="@string/amount_of_money"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_money"
        android:layout_width="334dp"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="312dp"
        android:hint="@string/money"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="334dp"
        android:layout_height="30dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="400dp"
        android:text="@string/record"
        android:textStyle="bold"
        android:background="@drawable/border_shadow_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
