<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kmitl.it.tiwipabmin58070044.moneyflow.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:text="@string/label_balance"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/balance"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:foreground="@drawable/border_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:foreground="@drawable/border_style"
        android:layout_marginStart="8dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/transaction"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/border_shadow_style"
        android:layout_marginStart="8dp"/>

</LinearLayout>
